Bug 1198628 Correct z-index for menu dropdown on relationship chart, more end cases

--- a/themes/colors/css/colors.css
+++ b/themes/colors/css/colors.css
@@ -84,7 +84,7 @@ html[dir=rtl] .makeMenu li ul li {text-align:right;}
 
 /* Menu setup  */
 #main-menu {display: inline-block;width:100%;margin:0;padding:0;height:48px;}
-#main-menu ul {padding:0;margin:0;border:1px solid #dddddd;border-radius:5px;list-style-type:none;position:absolute;visibility:hidden;opacity:0;background:#ffffff;z-index:201;}
+#main-menu ul {padding:0;margin:0;border:1px solid #dddddd;border-radius:5px;list-style-type:none;position:absolute;visibility:hidden;opacity:0;background:#ffffff;z-index:210;}
 #main-menu li {display:block; position:relative;float:left;list-style:none;}
 #main-menu li a {display:block;}
 #main-menu li > ul {display:block;position:absolute;top:0;left:100%;right:auto;}
